Adding modified files.
