# src/main/java/com/abnamro/service/ReciepesApiDelegateImpl.java
@@ -5,16 +5,14 @@ import com.abnamro.entity.Reciepes;
 import com.abnamro.exception.ReciepeException;
 import com.abnamro.model.Reciepe;
 import com.abnamro.repository.ReciepeRepository;
+import com.abnamro.service.mapper.RecipeMapper;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.Conditions;
-import org.modelmapper.ModelMapper;
-import org.modelmapper.PropertyMap;
-import org.modelmapper.TypeMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
@@ -26,13 +24,17 @@ public class ReciepesApiDelegateImpl implements ReciepesApiDelegate {
 
     @Autowired
     private ReciepeRepository reciepeRepository;
-    @Autowired
-    private ModelMapper modelMapper;
 
+    @Autowired
+    private RecipeMapper recipeMapper;
+
+    @Transactional
     @Override
     public ResponseEntity<Reciepe> addReciepe(Reciepe reciepe) {
         try {
-            return new ResponseEntity(reciepeRepository.save(modelMapper.map(reciepe, Reciepes.class)), HttpStatus.CREATED);
+            Reciepes reciepes = recipeMapper.mapRecipeToRecipesDomain(reciepe,false);
+            reciepeRepository.save(reciepes);
+            return new ResponseEntity(reciepe, HttpStatus.CREATED);
         } catch (DataAccessException dao) {
             log.error("Error while saving recipe {}." , reciepe , dao);
             throw new ReciepeException("Error while saving recipe.");
@@ -48,13 +50,13 @@ public class ReciepesApiDelegateImpl implements ReciepesApiDelegate {
 
         try {
             List<Reciepes> reciepes =
-                    reciepeRepository.findReciepesByNameAndIngredientAndServingsAndAdditionalData(name, ingredient, servings, additionalContent, dishType);
+                    reciepeRepository.findReciepesByNameAndIngredientAndServingsAndAdditionalData(name, servings, additionalContent, dishType,ingredient);
 
             if (null == reciepes || reciepes.size() == 0) {
                 return new ResponseEntity<>(HttpStatus.NO_CONTENT);
             }
 
-            List<Reciepe> reciepesData = reciepes.stream().map(recipe -> modelMapper.map(recipe, Reciepe.class)).collect(Collectors.toList());
+            List<Reciepe> reciepesData = reciepes.stream().map(recipe -> recipeMapper.mapRecipesDomainToRecipe(recipe)).collect(Collectors.toList());
             return ResponseEntity.ok(reciepesData);
         }catch (DataAccessException dao) {
             log.error("Error while fetching the recipes."  , dao);
@@ -65,26 +67,16 @@ public class ReciepesApiDelegateImpl implements ReciepesApiDelegate {
 
 
 
+    @Transactional
     @Override
     public ResponseEntity<Reciepe> updateReciepe(Reciepe reciepe) {
 
         try {
             Optional<Reciepes> reciepesOptional = reciepeRepository.findById(reciepe.getName());
-            reciepesOptional.map(o -> {
-                        TypeMap<Reciepe, Reciepes> mappings = modelMapper.addMappings(new PropertyMap<>() {
-                            @Override
-                            protected void configure() {
-                                when(Conditions.isNull()).skip().setName(source.getName());
-                                when(Conditions.isNull()).skip().setIngredient(source.getIngredient());
-                                when(Conditions.isNull()).skip().setServings(source.getServings());
-                                when(Conditions.isNull()).skip().setDishType(source.getDishType());
-                                when(Conditions.isNull()).skip().setAdditionalText(source.getAdditionalText());
-                            }
-                        });
-                        return modelMapper.map(reciepe, Reciepes.class);
-                    })
-                    .orElseThrow(() -> new ReciepeException("Recipe does not exist. Please add the recipe first."));
-            return new ResponseEntity(reciepeRepository.save(reciepesOptional.get()), HttpStatus.CREATED);
+            reciepesOptional.orElseThrow( () ->  new ReciepeException("Recipe doesnot exist."));
+
+            Reciepes reciepes = reciepeRepository.save(recipeMapper.mapRecipeToRecipesDomain(reciepe, true));
+            return new ResponseEntity(recipeMapper.mapRecipesDomainToRecipe(reciepes), HttpStatus.CREATED);
         }catch (DataAccessException dao) {
             log.error("Error while updating the recipes {}."  , reciepe, dao);
             throw new ReciepeException("Error while updating existing recipes.");
@@ -92,16 +84,15 @@ public class ReciepesApiDelegateImpl implements ReciepesApiDelegate {
     }
 
     @Override
-    public ResponseEntity<Void> deleteReciepes(String name, String apiKey) {
+    public ResponseEntity<Void> deleteReciepes(String name) {
 
         try {
             Optional<Reciepes> reciepesOptional = reciepeRepository.findById(name);
             reciepesOptional.orElseThrow(() -> new ReciepeException("No Recipe found to delete."));
-
-            reciepeRepository.deleteById(name);
+            reciepeRepository.delete(reciepesOptional.get());
             return new ResponseEntity(HttpStatus.OK);
         }catch (DataAccessException dao) {
-            log.error("Error while deleti the recipe with name {}."  , name, dao);
+            log.error("Error while deleting the recipe with name {}."  , name, dao);
             throw new ReciepeException("Error while deleting existing recipes.");
         }
 
